@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.4 ===
+* Added support of Windows operating system.
 * Added support of modern C++ 11 standard and above.
 * Updated build scripts.
 * Added more formats for URLSink (Windows support).
